# OpenClPitch

./: LICENSE  README.md
src/: CMakeLists.txt
src/App/: main.cpp
src/OpenClPitch/: PeakDetectMachine.cpp  PeakDetectMachine.h  PeakDetectMachineCommon.h  StopWatch.h  main.cpp  pitdet.cl
src/OpenClPitch.xcodeproj/: project.pbxproj
src/OpenClPitch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/PitchDetector/: main.cpp
src/PitchDetector/PeakDetectMachine/: PeakDetectMachine.cpp  PeakDetectMachine.h  PeakDetectMachineCommon.h
src/PitchDetector/PitchDetector/: PitchDetector.cpp  PitchDetector.h  PitchDetectorDefs.h
src/PitchDetector/PitchDetector/climpl/: PitchDetectorClImpl.cpp  PitchDetectorClImpl.h  device_picker.hpp  err_code.h
src/PitchDetector/PitchDetector/impl/: PitchDetectorImpl.cpp  PitchDetectorImpl.h  PitchDetectorNullImpl.cpp  PitchDetectorNullImpl.h
src/SoundCapture/SoundCapture/: CaptureDevice.cpp  CaptureDevice.h  RunnableService.cpp  RunnableService.h  SoundCapture.cpp  SoundCapture.h
src/SoundCapture/SoundCapture.xcodeproj/: project.pbxproj
src/SoundCapture/SoundCaptureTests/: Info.plist
